<resources>
    <string name="app_name">PlaceHolder</string>
    <string name="intro_title">Welcome to PlaceHolder</string>
    <string name="intro_text">Pin down your location or view the saved ones</string>
    <string name="intro_places_btn">Your places</string>
    <string name="intro_save_place_btn">Save your location</string>
    <string name="maps_title">Save your position</string>
    <string name="places_title">Your places</string>
    <string name="form_cancel">Cancel</string>
    <string name="permissions_missing">There are some permissions missing!</string>
    <string name="permission_phrase">You have to allow to:</string>
    <string name="permission_coarse_location">Coarse location</string>
    <string name="permission_fine_location">Fine location</string>
    <string name="permission_write_ext_storage">Write external storage</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyCCWi3VtBmqh54W7SyitD8ct2_fEpkmbWo</string> <!-- DEBUG ON, REL: AIzaSyCCWi3VtBmqh54W7SyitD8ct2_fEpkmbWo -->
    <string name="gps_settings_error">Error: please try again!</string>
    <string name="list_no_places">There are no places saved!</string>
    <string name="share_btn_label">Share</string>
    <string name="directions_btn_label">Directions</string>
    <string name="address_not_found">Address not found</string>
    <string name="place_text_hint">Your note</string>
    <string name="place_comment_intro">Write a custom note for the saved place</string>
    <string name="form_add">Save</string>
    <string name="place_saved">The place has been saved correctly</string>
    <string name="place_comment_added">Note added to the last place</string>
    <string name="place_delete_text">Do you really want to delete this place?</string>
    <string name="confirm_btn">Confirm</string>
    <string name="place_deleted">The place has been correctly deleted</string>
    <string name="information_task">Information</string>
    <string name="info_title">App Information</string>
    <string name="developed_label">Developed by @mountinnovation</string>
    <string name="follow_label">Support PlaceHolder</string>
    <string name="placeholder_link" translatable="false">placeholder.it</string>
    <string name="erase_btn_label">Delete everything</string>
    <string name="contact_btn_label">Contact developer</string>
    <string name="designed_by">Logo by @gabrielebiancat</string>
    <string name="reset_successful">All places are gone!</string>
    <string name="facebook_page" translatable="false">https://www.facebook.com/placeholderapp/</string>
    <string name="facebook_codepage" translatable="false">1402856883316764</string>
    <string name="mail_object">PlaceHolder Request</string>
    <string name="mail_error">Error on preparing the mail, try again!</string>
    <string name="web_url" translatable="false">https://github.com/andreamontanari/PlaceHolder/blob/master/README.md</string>
    <string name="copied_place">Place copied!</string>
    <string name="ask_erase_all">Do you really want to delete all saved places?</string>
    <string name="facebook_app_id" translatable="false">523336767867452</string>
    <string translatable="false" name="tw_consumer_key">CtmrPNZEJsI3SBWLUYyOst8fn</string>
    <string translatable="false" name="tw_consumer_secret">d3NuiotXzQwFxTHl4e26dB7yXJJIw6u49CW63c1q9vD1bw1hJ8</string>
    <string name="twitter_not_installed">Twitter App not present!</string>
    <string name="social_share_title">Choose where to post</string>
    <string name="splash_text">Your Places, secured!</string>
    <string name="error_gps_generic">Error on getting your position, try again!</string>
    <string name="error_maps_not_found">Google Maps App not found, please install it!</string>
</resources>
