<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/place_comment_intro"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:gravity="center" />

    <!-- Place Comment -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/place_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/place_text_hint"
            android:lines="2"
            android:textColor="@color/colorPrimary"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/undo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/post_btn"
            android:layout_toStartOf="@+id/post_btn" />
        <Button
            android:id="@+id/post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_add"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>