<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/deletion_body"
        android:text="@string/place_delete_text"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/undo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/confirm_btn"
            android:layout_toStartOf="@+id/confirm_btn" />
        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorPrimary"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</LinearLayout>