<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <include layout="@layout/tool_bar"
        android:id="@+id/toolbar"/>
    <ImageView
        android:id="@+id/logo_intro"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/intro_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo_intro"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/intro_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_places_btn"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:onClick="watchPlaces"
            />
        <Button
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_save_place_btn"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            android:onClick="savePlace"
            />

    </LinearLayout>

</RelativeLayout>